Fix article list padding on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -211,7 +211,15 @@ html {
 }
 
 .article-list {
-    padding-left: 10rem;
+    margin-bottom: 5rem;
+
+    @media #{$responsive-small} {
+        padding-left: 1em;
+    }
+
+    @media #{$responsive-medium-large} {
+        padding-left: 10rem;
+    }
 
     &__article {
         padding-right: 1em;
